--- a/CrowdFun.Core.csproj
+++ b/CrowdFun.Core.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="CrowdFundWeb\**" />
+    <EmbeddedResource Remove="CrowdFundWeb\**" />
+    <None Remove="CrowdFundWeb\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.2" />
