--- a/CrowdFun.Core.csproj
+++ b/CrowdFun.Core.csproj
@@ -7,8 +7,11 @@
 
   <ItemGroup>
     <Compile Remove="CrowdFundWeb\**" />
+    <Compile Remove="model\data\**" />
     <EmbeddedResource Remove="CrowdFundWeb\**" />
+    <EmbeddedResource Remove="model\data\**" />
     <None Remove="CrowdFundWeb\**" />
+    <None Remove="model\data\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,16 +24,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
-    <Folder Include="model\data\" />
   </ItemGroup>
 
 </Project>
