--- a/CrowdFundWeb/CrowdFundWeb.csproj
+++ b/CrowdFundWeb/CrowdFundWeb.csproj
@@ -13,6 +13,10 @@
     <ProjectReference Include="..\CrowdFun.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 
 
 </Project>
